[project]
name = "travel-advisory"
version = "1.0.0"
description = "Travel advisory report generator — fetches US State Department data and produces a PDF of high-risk destinations"
requires-python = ">=3.11"
dependencies = ["fpdf2"]

[project.scripts]
travel-advisory = "travel_advisory.main:main"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
